<resources>
    <string name="app_name">YourLawyer</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="error_no_conexion_disponible">Error: No hay conexión disponible</string>
    <string name="nombre_categoria">Nombre Categoria</string>
    <string name="cantidad_de_abogados">Cantidad de abogados</string>
    <string name="Subcategory">Subcategorias:</string>
    <string name="descripcion">Descripción</string>
    <string name="id_recibido">Id recibido %1$s</string>
    <string name="subcategory">Subcategoria</string>
    <string name="descripcion_detail">Descripción</string>
    <string name="examples">ejemplos:</string>
    <string name="url_de_lawyer">URL del lawyer: %1$s</string>
    <string name="url_del_lawyer_normal">URL del lawyer normal: %1$s</string>
    <string name="no_lawyers_found">No se encontraron abogados</string>
    <string name="failed_to_retrieve_lawyers">Fallo al recuperar abogados</string>
    <string name="descripcion_menus">Descripcion: %1$s</string>
    <string name="subcategoria_menus">Subcategoria: %1$s</string>
    <string name="ejemplos_menus">Ejemplos: %1$s</string>
    <string name="abogados_activos_menus">Abogados Activos: %1$s</string>
    <string name="id_menus">ID: %1$s</string>
    <string name="Categoria">Categorias de abogados</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_lawyer_sign_in_title">YourLawyer</string>
    <string name="please_enter_your_email_password_to_access"><![CDATA[Por favor ingresa tu correo y contraseña]]></string>
    <string name="email_address">Correo</string>
    <string name="password">Contraseña</string>
    <string name="remember_me">Recordar sesión?</string>
    <string name="forget_password">¿Olvido su contraseña?</string>
    <string name="sign_in">Ingresar</string>
    <string name="don_t_have_an_account_sign_up">¿No tienes cuenta? Registrarse</string>
    <string name="permission_required">Permission required</string>
    <string name="is_needed_user_permission_for_location_access">Is needed User permission for location access</string>
    <string name="ok">Ok</string>
    <string name="close">Close</string>
    <string name="the_permission_has_been_denied">The permission has been denied</string>
    <string name="Locations">Locations</string>
    <string name="user_succesfully_registred">User succesfully registred</string>
    <string name="error_has_been_occurred_sending_the_mail">Error has been occurred sending the mail</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_your_email_to_receive_reset_link">Enter your email to receive reset link</string>
    <string name="send">Send</string>
    <string name="email_has_been_sent_to">Email has been sent to:</string>
    <string name="the_email_has_been_sent_to_reset_your_password">The email has been sent to reset your password</string>
    <string name="the_link_to_reset_the_password_has_not_been_sent">The link to reset the password has not been sent</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address</string>
    <string name="cancel">Cancel</string>
    <string name="mail_is_needed">Mail is needed</string>
    <string name="mail_has_not_the_correct_format">El email no tiene el formato correcto</string>
    <string name="password_is_needed">Password is needed</string>
    <string name="password_needs_at_least_6_characters">Password needs at least 6 characters</string>
    <string name="error_invalid_email">ERROR_INVALID_EMAIL</string>
    <string name="error_mail_has_not_the_correct_format">Error: Mail has not the correct format</string>
    <string name="error_password_has_not_the_correct_format">Error: Password has not the correct format</string>
    <string name="error_wrong_password">ERROR_WRONG_PASSWORD</string>
    <string name="error_account_exists_with_different_credential">ERROR_ACCOUNT_EXISTS_WITH_DIFFERENT_CREDENTIAL</string>
    <string name="error_an_account_already_exists_with_the_same_email_address_but_different_sign_in_credentials">Error: An account already exists with the same email address but different sign-in credentials.</string>
    <string name="error_email_already_in_use">ERROR_EMAIL_ALREADY_IN_USE</string>
    <string name="error_the_email_address_is_already_in_use_by_another_account">Error: The Email address is already in use by another account.</string>
    <string name="error_user_token_expired">ERROR_USER_TOKEN_EXPIRED</string>
    <string name="error_the_session_has_expired_please_log_in_again">Error: The session has expired. Please log in again.</string>
    <string name="error_user_not_found">ERROR_USER_NOT_FOUND</string>
    <string name="error_the_user_does_not_exist">Error: The user does not exist</string>
    <string name="error_weak_password">ERROR_WEAK_PASSWORD</string>
    <string name="invalid_password">Invalid password</string>
    <string name="no_network">NO_NETWORK</string>
    <string name="no_network_connection">No network connection</string>
    <string name="error_authentication_failed_please_check">Error: Authentication failed,Please check your credentials</string>
    <string name="authentication_successful">Authentication successful</string>
    <string name="sign_out">sign_out</string>
    <string name="Error">Error: %1$s</string>
    <string name="falla_al_cargar_los_datos">Falla al cargar los datos: %1$s</string>
    <string name="Perfil">Configuración de perfil</string>
    <string name="add_image">Cargar Imagen de perfil</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="description_placeholder">Ingrese una breve descripción...</string>
    <string name="select_skills">Selecciona tus habilidades</string>
    <string name="save">Guardar</string>
    <string name="ingresa_un_presupuesto_valido">Ingresa un presupuesto valido</string>
    <string name="ingresa_un_presupuesto_en_rango">Ingresa un presupuesto valido en el rango especificado</string>
    <string name="contrataci_n_publicadaa">Contratación publicadaa</string>
    <string name="por_favor_ingresa_un_presupuesto_para_aplicar_a_este_proyecto">Por favor ingresa un presupuesto para aplicar a este proyecto</string>
    <string name="publicar_propuesta">Publicar propuesta</string>
    <string name="contacto">Contacto</string>
    <string name="presupuesto">presupuesto</string>
    <string name="esperando_confirmaci_n_del_cliente_presupuesto_ofertado">Esperando confirmación del cliente presupuesto ofertado : %1$s</string>
    <string name="presupuesto_aceptado">Presupuesto aceptado</string>
    <string name="tu_correo_es">Tu correo es: %1$s</string>
    <string name="nombre_del_abogado">Nombre del Abogado</string>
    <string name="escribe_tu_mensaje">Escribe tu mensaje...</string>
    <string name="enviar">Enviar</string>
    <string name="contratando_a_nombre_del_abogado">Contratando a: Nombre del Abogado</string>
    <string name="descripci_n_del_servicio">Descripción del servicio:</string>
    <string name="el_abogado_brindar_asesoramiento_en_el_caso_seleccionado">El abogado brindará asesoramiento en el caso seleccionado.</string>
    <string name="costo_1000_mxn">Costo: $1000 MXN</string>
    <string name="ingresa_tus_datos_bancarios">Ingresa tus datos bancarios</string>
    <string name="continuar_con_el_pago">Continuar con el pago</string>
    <string name="cancelar">Cancelar</string>
    <string name="yourlawyer">YourLawyer</string>
    <string name="encuentra_el_abogado_a_tu_medida">Encuentra el abogado a tu medida!</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_hint">Nombre*</string>
    <string name="apellido">Apellido</string>
    <string name="apellido_hint">Apellido*</string>
    <string name="email">Email</string>
    <string name="correo_electr_nico">Correo electrónico*</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresa_tu_contrase_a">Ingresa tu contraseña*</string>
    <string name="escoge_una_opci_n">Escoge una opción</string>
    <string name="busco_un_abogado">Busco un Abogado</string>
    <string name="soy_abogado">Soy Abogado</string>
    <string name="he_le_do_los_t_rminos_y_condiciones">He leído los términos y condiciones</string>
    <string name="nete_ahora">Únete Ahora</string>
    <string name="imagereference">imageReference</string>
    <string name="description">Description</string>
    <string name="budget">Budget</string>
    <string name="price">price</string>
</resources>