<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.CheckoutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Nombre del abogado -->
            <ImageView
                android:id="@+id/creditCardImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/empty_image_resource" />

            <TextView
                android:id="@+id/lawyerNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contratando_a_nombre_del_abogado"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp" />

            <!-- Descripción del servicio -->
            <TextView
                android:id="@+id/serviceDescriptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripci_n_del_servicio"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/serviceDetailsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/el_abogado_brindar_asesoramiento_en_el_caso_seleccionado"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp" />

            <!-- Costo del servicio -->
            <TextView
                android:id="@+id/serviceCostLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/costo_1000_mxn"
                android:textSize="16sp"
                android:background="@drawable/edit_text_background"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:layout_marginBottom="16dp" />

            <!-- Métodos de pago -->
            <TextView
                android:id="@+id/paymentMethodLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingresa_tus_datos_bancarios"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black"
                android:paddingTop="40dp"
                android:paddingBottom="40dp"/>


            <Button
                android:id="@+id/checkoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continuar_con_el_pago"
                android:backgroundTint="@color/blue"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp" />

            <!-- Cancelar -->
            <Button
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:backgroundTint="@color/red"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>