<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login"
        android:padding="16dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="16dp">

            <!-- Logo -->
            <ImageView
                android:id="@+id/logoIV"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo_your_lawyer"
                android:layout_marginBottom="16dp" />

            <!-- Title -->
            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_lawyer_sign_in_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black" />

            <!-- Subtitle -->
            <TextView
                android:id="@+id/subtitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_email_password_to_access"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@color/gray"
                android:layout_marginBottom="24dp" />

            <!-- Email -->
            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:background="@drawable/edit_text_background"
                android:layout_marginBottom="16dp"
                android:padding="12dp" />

            <!-- Password -->
            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:background="@drawable/edit_text_background"
                android:layout_marginBottom="16dp"
                android:padding="12dp" />

            <!-- Remember and forgot pass -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="16dp">

                <CheckBox
                    android:id="@+id/rememberMeCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/forgotPasswordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/blue"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- [Button] Sign In -->
            <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:backgroundTint="@color/blue"
                android:textColor="@color/white"
                android:layout_marginBottom="16dp"
                android:padding="12dp" />

            <!-- Sign up -->
            <TextView
                android:id="@+id/signUpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp" />

            <!-- Progress Bar -->
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible" />

        </LinearLayout>


    </ScrollView>
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>