<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:id="@+id/casesTableView"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="16dp">

    <ImageView
        android:id="@+id/profileImageView"
        android:contentDescription="@string/imagereference"
        android:foregroundGravity="center"
        android:layout_width="wrap_content"
        android:layout_height="250dp"/>


    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/budgetLabel" />

    <TextView
        android:id="@+id/budgetLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/budget"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>