<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.ChatContactFragment">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Header -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:padding="8dp"
            android:background="@drawable/chat_background">
            <ImageView
                android:id="@+id/returnButton"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/lawyerImageView"
                android:src="@drawable/person_resource"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:textColor="@color/black"
                android:text="@string/nombre_del_abogado"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

        <!-- Messages -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messagesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Message Input -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/chat_background"
            android:padding="8dp">

            <EditText
                android:id="@+id/messageInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColorHint="@color/black"
                android:hint="@string/escribe_tu_mensaje"
                android:padding="8dp" />

            <ImageButton
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/send_resource"
                android:contentDescription="@string/enviar"
                android:background="?attr/selectableItemBackgroundBorderless" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>